# gremlins

./: .gitignore  .venv  AGENTS.md  Cargo.toml  DESIGN.md  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
.gremlins/: boss-no-copilot.yaml  boss-terse.yaml  env  gh-address.yaml  gh-terse-boss.yaml  gh-terse-no-copilot.yaml  gh-terse.yaml  local-terse.yaml  pr-extend.yaml
.gremlins/pipelines/: boss-terse.yaml  gh-terse-no-copilot.yaml  local-terse.yaml
.gremlins/prompts/: complexity_review.md  implement_pr_extension.md  local_address.md  local_review.md  local_review_complexity.md  no_lint_in_implement.md  review_plan_fidelity.md  small_diffs.md  terse_no_backward.md  terse_style.md
_gremlins_core/: __init__.py  __init__.pyi
crates/gremlins-core/: Cargo.toml  _gremlins_core.pyi  _gremlins_core.utils.proc.pyi  _gremlins_core.utils.pyi  pyproject.toml
crates/gremlins-core/_gremlins_core/utils/: proc.pyi
crates/gremlins-core/src/: lib.rs
crates/gremlins-core/src/core/: proc.rs
crates/gremlins-core/src/python/: proc.rs
crates/gremlins-core/src/python/utils/: mod.rs  proc.rs
gremlins/: AGENTS.md  CLAUDE.md  __init__.py  __main__.py  _core.py  bail.py  cli.py  env_file.py  errors.py  gh.py  gh_utils.py  git.py  handoff.py  init.py  launcher.py  logging_setup.py  paths.py  pipeline.py  protocols.py  run_child.py  run_pipeline.py  runner.py  schema.py  session_summary.py  stage_clients.py  state.py
gremlins/artifacts/: AGENTS.md  __init__.py  _protocol.py  engine.py  registry.py  resolve.py  schemes.py  uri.py
gremlins/cli/: __init__.py  __main__.py  artifacts.py  clean.py  fleet.py  init.py  launch.py  pipeline_args.py  prompt_for_assistant.py  queue.py  resume.py  review_address.py
gremlins/clients/: AGENTS.md  __init__.py  claude.py  client.py  config.py  copilot.py  fake.py  protocol.py  registry.py  resolve.py  stream.py  subprocess_utils.py  tools.py
gremlins/executor/: AGENTS.md  fork.py  gremlin.py  parallel_state.py  pipeline.py  review_address.py  run.py  state.py  state_utils.py
gremlins/fleet/: AGENTS.md  CLAUDE.md  __init__.py  ack.py  cli.py  close.py  constants.py  duration.py  land.py  log.py  render.py  rescue.py  resolve.py  session_summary.py  state.py  stop.py  views.py
gremlins/orchestrators/: AGENTS.md  CLAUDE.md  __init__.py  base.py  boss.py  gh.py  gh_pipeline.py  local.py  local_pipeline.py  pipeline.py  review_address.py  run.py
gremlins/permissions/: __init__.py  loader.py  policy.py  validation.py
gremlins/pipeline/: __init__.py  discovery.py  inputs.py  loader.py  preprocess.py  schema.py
gremlins/pipelines/: AGENTS.md  boss-gh-terse-no-copilot.yaml  boss.yaml  gh-terse-no-copilot.yaml  gh-terse.yaml  gh.yaml  local.yaml  pr-extend.yaml
gremlins/prompts/: AGENTS.md  README.md  __init__.py  address.md  address_code.md  address_gh.md  bail_section.md  bail_section_fix.md  ci_fix.md  code_style.md  commit_fresh.md  commit_handoff_clean.md  commit_handoff_dirty.md  commit_pr_fresh.md  commit_pr_handoff_clean.md  commit_pr_handoff_dirty.md  default_openai_agents_instructions.md  ghaddress.md  ghreview.md  github_address_pull_request_reviews.md  github_draft_pull_request.md  github_open_pull_request.md  github_review_pull_request.md  handoff.md  handoff_sanitize.md  handoff_spec_section.md  handoff_style_section.md  impl_commit_git.md  implement_gh.md  implement_local.md  loader.py  open_github_pr.md  plan.md  plan_gh.md  review_gh.md  verify_fix.md
gremlins/queue/: core.py
gremlins/recipes/: __init__.py
gremlins/spawn/: child.py  pipeline.py
gremlins/stages/: AGENTS.md  CLAUDE.md  __init__.py  _passthrough.py  address_code.py  agent.py  agent_runner.py  all.py  apply.py  base.py  chain.py  ci_fix.md  claude_prompt.py  cmd.py  commit.py  commit_pr.py  composite.py  compound.py  constants.py  context.py  exec.py  ghaddress.py  ghplan.py  ghreview.py  github_address_pull_request_reviews.py  github_open_pull_request.py  github_push_to_pr_branch.py  github_request_copilot_review.py  github_wait_ci.py  github_wait_copilot.py  handoff.py  handoff_branch.py  implement.py  introspect.py  loop.py  materialize_to_branch.py  open_github_pr.py  outcome.py  parallel.py  plan.py  (+12 more)
gremlins/utils/: _spawn_logged_process.py  decorators.py  git.py  github.py  parallel_bail.py  pr.py  proc.py  spawn_logged_process.py  state_file.py  text.py  watch.py  yaml.py  yaml_io.py
tests/: conftest.py  test_active_children.py  test_argbuilder.py  test_artifact_resolve.py  test_cli.py  test_cli_artifacts.py  test_cli_clean.py  test_cli_launch.py  test_cli_launch_wait.py  test_cli_permissions.py  test_clients_anthropic_sdk.py  test_clients_claude.py  test_clients_config.py  test_clients_copilot.py  test_clients_openai.py  test_clients_parse.py  test_clients_policy_seam.py  test_clients_spec.py  test_decorators.py  test_default_policy_coverage.py  test_env_file.py  test_executor_run.py  test_fleet.py  test_gh_utils.py  test_git_remove_worktrees.py  test_git_worktree_default_parent.py  test_github.py  test_github_open_pull_request.py  test_gremlin_fork.py  test_gremlin_open.py  test_gremlin_smoke.py  test_gremlin_state.py  test_handoff.py  test_init.py  test_input_sources.py  test_introspect.py  test_launcher.py  test_launcher_graft.py  test_launcher_input_sources.py  test_launcher_persist_pipeline.py  (+80 more)
tests/artifacts/: test_engine.py  test_registry.py  test_schemes.py  test_uri.py
(+51 files in other folders)
