[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "gremlins-ai"
version = "0.0.0"
description = "Background coding-agent pipelines that plan, implement, review, and land work end-to-end"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.59",  # used in rollout 2/3 of #626
    "openai-agents",
    "platformdirs",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/amorphous-industries/gremlins"
Repository = "https://github.com/amorphous-industries/gremlins"
Issues = "https://github.com/amorphous-industries/gremlins/issues"

[project.optional-dependencies]
dev = ["pytest", "ruff", "pyright"]

[project.scripts]
gremlins = "gremlins.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gremlins"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: slow tests that call real external APIs (deselect with -m 'not integration')",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "TID"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pyright]
typeCheckingMode = "strict"
include = [
    "gremlins",
]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
