[build-system]
requires = ["hatchling>=1.18.0", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "gremlins-ai"
version = "0.0.0"
description = "Background coding-agent pipelines that plan, implement, review, and land work end-to-end"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["requirements.dev.txt"]

[project.urls]
Homepage = "https://github.com/amorphous-industries/gremlins"
Repository = "https://github.com/amorphous-industries/gremlins"
Issues = "https://github.com/amorphous-industries/gremlins/issues"

[project.scripts]
gremlins = "gremlins.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gremlins"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: slow tests that call real external APIs (deselect with -m 'not integration')",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "TID"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pyright]
typeCheckingMode = "strict"
include = [
    "gremlins",
]
exclude = [
    "gremlins/_core.py",
]
