[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "gremlins-ai"
version = "0.0.0"
description = "Background coding-agent pipelines that plan, implement, review, and land work end-to-end"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.59",
    "openai-agents",
    "platformdirs",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.13",
    "pyright==1.1.409",
    "maturin>=1.5,<2.0",
]

[project.urls]
Homepage = "https://github.com/amorphous-industries/gremlins"
Repository = "https://github.com/amorphous-industries/gremlins"
Issues = "https://github.com/amorphous-industries/gremlins/issues"

[project.scripts]
gremlins = "gremlins.cli:main"

[tool.maturin]
module-name = "_gremlins_core"
manifest-path = "crates/gremlins-core/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: slow tests that call real external APIs (deselect with -m 'not integration')",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "TID"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pyright]
typeCheckingMode = "strict"
include = [
    "gremlins",
]