[package]
name = "gremlins-core"
version = "0.0.0"
edition = "2021"

[lib]
name = "gremlins_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.29"
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["process", "io-util", "time", "macros"] }
nix = { version = "0.30", features = ["signal", "process"] }

[features]
extension-module = ["pyo3/extension-module"]
