[package]
name = "gremlins-core"
version = "0.0.0"
edition = "2021"

[lib]
name = "gremlins_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.29"
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
libc = "0.2"
tokio = { version = "1", features = ["process", "time", "rt", "sync", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[features]
extension-module = ["pyo3/extension-module"]
