[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "gremlins-core"
version = "0.0.0"
description = "Rust-native core for gremlins"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]

[tool.maturin]
features = ["extension-module"]
module-name = "_gremlins_core"
